--- a/test-output/old/NopCommerce - User/reporter-output.html
+++ b/test-output/old/NopCommerce - User/reporter-output.html
@@ -1,1 +1,33 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>[2022-07-05 09:51:18,595] Register - step 01: Navigate to 'register' page
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:19,289] Register - step 02 : enter to firstname textbox with value is 'Automation'
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:19,482] Register - step 03 : enter to lastName textbox with value is 'FC'
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:19,657] Register - step 04 : enter to emailAddress textbox with value is 'afc9332@gmail.vn'
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:19,848] Register - step 05 : enter to validPassword textbox with value is '123456'
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:20,037] Register - step 06 : enter to confirmPassword textbox with value is '123456'
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:20,206] Register - step 07 : click to Register button
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:21,694] Register - step 08 : Verify register sucess message is displayed
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:21,768] Register - step 09 : click to logout link
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:22,761] Login - step 01: Navigate to login page
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:23,458] Login - step 02: Enter to Email textbox with values is 'afc9332@gmail.vn'
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:23,695] Login - step 03: Enter to password textbox with values is '123456'
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:23,848] Login - step 04: Click to login button
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:24,607] Login - step 05: Verify 'My Account' link is displayed
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:24,711] Login - step 06: Navigate to 'My account' page
+<br></td></tr>
+<tr><td>[2022-07-05 09:51:25,387] Login - step 07: Verify 'Customer Infor' page is displayed
+<br></td></tr>
+</table>
