--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,19 +9,27 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">NopCommerce - User</th></tr>
-<tr><td><a href="#t0">Run on CHROME</a></td><td class="num">0</td><td class="num attn">2</td><td class="num">0</td><td class="num">6,802</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on CHROME</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">14,179</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce - User</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on CHROME &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.nopcommerce.user.Level_20_Data_manager_json</td><td><a href="#m0">beforeClass</a></td><td rowspan="1">1656988802305</td><td rowspan="1">6402</td></tr><tr><th colspan="4">Run on CHROME &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="1">com.nopcommerce.user.Level_20_Data_manager_json</td><td><a href="#m1">afterClass</a></td><td rowspan="1">1656988809058</td><td rowspan="1">0</td></tr><tr><th colspan="4">Run on CHROME &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="2">com.nopcommerce.user.Level_20_Data_manager_json</td><td><a href="#m2">User_01_Register</a></td><td rowspan="1">1656988809038</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m3">User_02_Login</a></td><td rowspan="1">1656988809050</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce - User</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on CHROME &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.nopcommerce.user.Level_14_Log_Report_TestNG</td><td><a href="#m0">User_01_Register</a></td><td rowspan="1">1656989478476</td><td rowspan="1">4087</td></tr><tr class="passedeven"><td><a href="#m1">User_02_Login</a></td><td rowspan="1">1656989482756</td><td rowspan="1">2710</td></tr></tbody>
 </table>
-<h2>Run on CHROME</h2><h3 id="m0">com.nopcommerce.user.Level_20_Data_manager_json#beforeClass</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.nopcommerce.user.Level_20_Data_manager_json.beforeClass(Level_20_Data_manager_json.java:36)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.nopcommerce.user.Level_20_Data_manager_json#afterClass</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.nopcommerce.user.Level_20_Data_manager_json#User_01_Register</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.nopcommerce.user.Level_20_Data_manager_json.beforeClass(Level_20_Data_manager_json.java:36)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.nopcommerce.user.Level_20_Data_manager_json#User_02_Login</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.nopcommerce.user.Level_20_Data_manager_json.beforeClass(Level_20_Data_manager_json.java:36)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on CHROME</h2><h3 id="m0">com.nopcommerce.user.Level_14_Log_Report_TestNG#User_01_Register</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[2022-07-05 09:51:18,595] Register - step 01: Navigate to 'register' page
+<br><br/>[2022-07-05 09:51:19,289] Register - step 02 : enter to firstname textbox with value is 'Automation'
+<br><br/>[2022-07-05 09:51:19,482] Register - step 03 : enter to lastName textbox with value is 'FC'
+<br><br/>[2022-07-05 09:51:19,657] Register - step 04 : enter to emailAddress textbox with value is 'afc9332@gmail.vn'
+<br><br/>[2022-07-05 09:51:19,848] Register - step 05 : enter to validPassword textbox with value is '123456'
+<br><br/>[2022-07-05 09:51:20,037] Register - step 06 : enter to confirmPassword textbox with value is '123456'
+<br><br/>[2022-07-05 09:51:20,206] Register - step 07 : click to Register button
+<br><br/>[2022-07-05 09:51:21,694] Register - step 08 : Verify register sucess message is displayed
+<br><br/>[2022-07-05 09:51:21,768] Register - step 09 : click to logout link
+<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.nopcommerce.user.Level_14_Log_Report_TestNG#User_02_Login</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[2022-07-05 09:51:22,761] Login - step 01: Navigate to login page
+<br><br/>[2022-07-05 09:51:23,458] Login - step 02: Enter to Email textbox with values is 'afc9332@gmail.vn'
+<br><br/>[2022-07-05 09:51:23,695] Login - step 03: Enter to password textbox with values is '123456'
+<br><br/>[2022-07-05 09:51:23,848] Login - step 04: Click to login button
+<br><br/>[2022-07-05 09:51:24,607] Login - step 05: Verify 'My Account' link is displayed
+<br><br/>[2022-07-05 09:51:24,711] Login - step 06: Navigate to 'My account' page
+<br><br/>[2022-07-05 09:51:25,387] Login - step 07: Verify 'Customer Infor' page is displayed
+<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
