--- a/test-output/index.html
+++ b/test-output/index.html
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-NopCommerce_-_User" class="navigator-link">
-              <span class="suite-name border-skipped">NopCommerce - User</span>
+              <span class="suite-name border-passed">NopCommerce - User</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,26 +91,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,  2 skipped,  </span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title skipped">Skipped methods</span>
-                    <span class="show-or-hide-methods skipped">
-                      <a href="#" panel-name="suite-NopCommerce_-_User" class="hide-methods skipped suite-NopCommerce_-_User"> (hide)</a> <!-- hide-methods skipped suite-NopCommerce_-_User -->
-                      <a href="#" panel-name="suite-NopCommerce_-_User" class="show-methods skipped suite-NopCommerce_-_User"> (show)</a> <!-- show-methods skipped suite-NopCommerce_-_User -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-NopCommerce_-_User" class="hide-methods passed suite-NopCommerce_-_User"> (hide)</a> <!-- hide-methods passed suite-NopCommerce_-_User -->
+                      <a href="#" panel-name="suite-NopCommerce_-_User" class="show-methods passed suite-NopCommerce_-_User"> (show)</a> <!-- show-methods passed suite-NopCommerce_-_User -->
                     </span>
-                    <div class="method-list-content skipped suite-NopCommerce_-_User">
+                    <div class="method-list-content passed suite-NopCommerce_-_User">
                       <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce_-_User" title="com.nopcommerce.user.Level_20_Data_manager_json" class="method navigator-link" hash-for-method="User_01_Register">User_01_Register</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce_-_User" title="com.nopcommerce.user.Level_14_Log_Report_TestNG" class="method navigator-link" hash-for-method="User_01_Register">User_01_Register</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce_-_User" title="com.nopcommerce.user.Level_20_Data_manager_json" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce_-_User" title="com.nopcommerce.user.Level_14_Log_Report_TestNG" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content skipped suite-NopCommerce_-_User -->
+                    </div> <!-- method-list-content passed suite-NopCommerce_-_User -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -122,10 +122,10 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-NopCommerce_-_User" class="panel NopCommerce_-_User">
-          <div class="suite-NopCommerce_-_User-class-skipped">
+          <div class="suite-NopCommerce_-_User-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="skipped.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_20_Data_manager_json</span>
+              <img src="passed.png"/>
+              <span class="class-name">com.nopcommerce.user.Level_14_Log_Report_TestNG</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -133,10 +133,6 @@
                   <a name="User_01_Register">
                   </a> <!-- User_01_Register -->
                   <span class="method-name">User_01_Register</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at com.nopcommerce.user.Level_20_Data_manager_json.beforeClass(Level_20_Data_manager_json.java:36)
-... Removed 26 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -144,14 +140,10 @@
                   <a name="User_02_Login">
                   </a> <!-- User_02_Login -->
                   <span class="method-name">User_02_Login</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at com.nopcommerce.user.Level_20_Data_manager_json.beforeClass(Level_20_Data_manager_json.java:36)
-... Removed 26 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-NopCommerce_-_User-class-skipped -->
+          </div> <!-- suite-NopCommerce_-_User-class-passed -->
         </div> <!-- panel NopCommerce_-_User -->
         <div panel-name="test-xml-NopCommerce_-_User" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -169,7 +161,7 @@
   &lt;test thread-count=&quot;3&quot; name=&quot;Run on CHROME&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.nopcommerce.user.Level_20_Data_manager_json&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.user.Level_14_Log_Report_TestNG&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on CHROME --&gt;
 &lt;/suite&gt; &lt;!-- NopCommerce - User --&gt;
@@ -211,18 +203,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'User_02_Login')
-data.setCell(0, 2, 'com.nopcommerce.user.Level_20_Data_manager_json')
-data.setCell(0, 3, 0);
+data.setCell(0, 1, 'User_01_Register')
+data.setCell(0, 2, 'com.nopcommerce.user.Level_14_Log_Report_TestNG')
+data.setCell(0, 3, 4087);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'User_01_Register')
-data.setCell(1, 2, 'com.nopcommerce.user.Level_20_Data_manager_json')
-data.setCell(1, 3, 0);
+data.setCell(1, 1, 'User_02_Login')
+data.setCell(1, 2, 'com.nopcommerce.user.Level_14_Log_Report_TestNG')
+data.setCell(1, 3, 2710);
 window.suiteTableData['NopCommerce_-_User']= { tableData: data, tableDiv: 'times-div-NopCommerce_-_User'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 0 ms</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-NopCommerce_-_User">
               </div> <!-- times-div-NopCommerce_-_User -->
             </div> <!-- times-div -->
@@ -233,6 +225,48 @@ return data;
             <span class="header-content">Reporter output for NopCommerce - User</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">User_01_Register</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">[2022-07-05 09:51:18,595] Register - step 01: Navigate to 'register' page
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:19,289] Register - step 02 : enter to firstname textbox with value is 'Automation'
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:19,482] Register - step 03 : enter to lastName textbox with value is 'FC'
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:19,657] Register - step 04 : enter to emailAddress textbox with value is 'afc9332@gmail.vn'
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:19,848] Register - step 05 : enter to validPassword textbox with value is '123456'
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:20,037] Register - step 06 : enter to confirmPassword textbox with value is '123456'
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:20,206] Register - step 07 : click to Register button
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:21,694] Register - step 08 : Verify register sucess message is displayed
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:21,768] Register - step 09 : click to logout link
+<br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">User_02_Login</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">[2022-07-05 09:51:22,761] Login - step 01: Navigate to login page
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:23,458] Login - step 02: Enter to Email textbox with values is 'afc9332@gmail.vn'
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:23,695] Login - step 03: Enter to password textbox with values is '123456'
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:23,848] Login - step 04: Click to login button
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:24,607] Login - step 05: Verify 'My Account' link is displayed
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:24,711] Login - step 06: Navigate to 'My account' page
+<br></span>
+                <span class="reporter-method-output">[2022-07-05 09:51:25,387] Login - step 07: Verify 'Customer Infor' page is displayed
+<br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-NopCommerce_-_User" class="panel">
@@ -248,25 +282,27 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.nopcommerce.user.Level_20_Data_manager_json</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.nopcommerce.user.Level_14_Log_Report_TestNG</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">initBeforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">beforeClass(chrome)</span>
-                <span class="method-start">125 ms</span>
+                <span class="method-start">124 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">User_01_Register</span>
-                <span class="method-start">-1656988802180 ms</span>
+                <span class="method-start">6401 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">User_02_Login</span>
-                <span class="method-start">-1656988802180 ms</span>
+                <span class="method-start">10681 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">afterClass</span>
+                <span class="method-start">13394 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
