--- a/test-output/old/NopCommerce - User/methods.html
+++ b/test-output/old/NopCommerce - User/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce - User</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9ebc6b">  <td>22/07/05 09:40:02</td>   <td>0</td> <td title="&gt;&gt;BaseTest.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_20_Data_manager_json@69e49a81]">&gt;&gt;initBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423507882</td>   <td></td> </tr>
-<tr bgcolor="f78263">  <td>22/07/05 09:40:02</td>   <td>112</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_20_Data_manager_json.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_20_Data_manager_json@69e49a81]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423507882</td>   <td></td> </tr>
-<tr bgcolor="f78263">  <td>22/07/05 09:40:09</td>   <td>6834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_20_Data_manager_json.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_20_Data_manager_json@69e49a81]">User_01_Register</td> 
-  <td>main@1423507882</td>   <td></td> </tr>
-<tr bgcolor="f78263">  <td>22/07/05 09:40:09</td>   <td>6848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_20_Data_manager_json.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_20_Data_manager_json@69e49a81]">User_02_Login</td> 
-  <td>main@1423507882</td>   <td></td> </tr>
+<tr bgcolor="937d99">  <td>22/07/05 09:51:12</td>   <td>0</td> <td title="&gt;&gt;BaseTest.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_14_Log_Report_TestNG@1023150a]">&gt;&gt;initBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1668376627</td>   <td></td> </tr>
+<tr bgcolor="7068df">  <td>22/07/05 09:51:12</td>   <td>113</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_14_Log_Report_TestNG.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_14_Log_Report_TestNG@1023150a]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1668376627</td>   <td></td> </tr>
+<tr bgcolor="7068df">  <td>22/07/05 09:51:18</td>   <td>6377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Log_Report_TestNG.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_14_Log_Report_TestNG@1023150a]">User_01_Register</td> 
+  <td>main@1668376627</td>   <td></td> </tr>
+<tr bgcolor="7068df">  <td>22/07/05 09:51:22</td>   <td>10657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Log_Report_TestNG.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_14_Log_Report_TestNG@1023150a]">User_02_Login</td> 
+  <td>main@1668376627</td>   <td></td> </tr>
+<tr bgcolor="7068df">  <td>22/07/05 09:51:25</td>   <td>13370</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_14_Log_Report_TestNG.afterClass()[pri:0, instance:com.nopcommerce.user.Level_14_Log_Report_TestNG@1023150a]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1668376627</td>   <td></td> </tr>
 </table>
